[gd_scene load_steps=15 format=3]

[ext_resource type="Script" path="res://Script/BackPack/sell_or_equ.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://5vkujrow3j2v" path="res://Art/Game_2/Ldl/841.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dchln5ejhr1jn" path="res://Art/BackPack/AllItems/5.png" id="3"]
[ext_resource type="Texture2D" uid="uid://tameiud4o7gk" path="res://Art/BackPack/15.png" id="4"]

[sub_resource type="StyleBoxEmpty" id="1"]
script = null

[sub_resource type="StyleBoxEmpty" id="2"]
script = null

[sub_resource type="StyleBoxEmpty" id="3"]
script = null

[sub_resource type="StyleBoxEmpty" id="4"]
script = null

[sub_resource type="StyleBoxEmpty" id="5"]
script = null

[sub_resource type="StyleBoxEmpty" id="6"]
script = null

[sub_resource type="StyleBoxEmpty" id="7"]
script = null

[sub_resource type="StyleBoxEmpty" id="8"]
script = null

[sub_resource type="StyleBoxEmpty" id="9"]
script = null

[sub_resource type="StyleBoxEmpty" id="10"]
script = null

[node name="sell_or_equ" type="Control"]
show_behind_parent = true
layout_mode = 3
anchor_right = 0.063
anchor_bottom = 0.102
offset_left = 5.0
offset_right = 5.78
offset_bottom = 17.82
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
mouse_default_cursor_shape = 2
script = ExtResource( "1" )
metadata/_edit_lock_ = true

[node name="Panel" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 57.0
offset_bottom = 72.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="841" type="Sprite2D" parent="Panel"]
position = Vector2(26.3333, 35.6667)
scale = Vector2(0.697318, 0.522145)
texture = ExtResource( "2" )
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 57.0
offset_bottom = 57.0
mouse_filter = 0
theme_override_constants/separation = -2
alignment = 1
metadata/_edit_lock_ = true

[node name="infor" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 10
text = "第1页第2格"
horizontal_alignment = 1
vertical_alignment = 1

[node name="equ" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/hover = SubResource( "2" )
theme_override_styles/pressed = SubResource( "3" )
theme_override_styles/disabled = SubResource( "4" )
theme_override_styles/focus = SubResource( "5" )
icon = ExtResource( "3" )
flat = true
icon_alignment = 1
expand_icon = true

[node name="sell" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/normal = SubResource( "6" )
theme_override_styles/hover = SubResource( "7" )
theme_override_styles/pressed = SubResource( "8" )
theme_override_styles/disabled = SubResource( "9" )
theme_override_styles/focus = SubResource( "10" )
icon = ExtResource( "4" )
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited" flags=18]
[connection signal="mouse_exited" from="Panel" to="." method="_on_panel_mouse_exited" flags=18]
[connection signal="mouse_exited" from="VBoxContainer" to="." method="_on_v_box_container_mouse_exited" flags=18]
[connection signal="pressed" from="VBoxContainer/equ" to="." method="_on_equ_pressed" flags=18]
[connection signal="pressed" from="VBoxContainer/sell" to="." method="_on_sell_pressed" flags=18]
